--- a/Final1123_Jordan_Pals/style/style.css
+++ b/Final1123_Jordan_Pals/style/style.css
@@ -76,6 +76,7 @@ button:hover {
     padding-top: 30px;
     padding-bottom: 20px;
     text-align: center;
+    height: 52em
 }
 
 header {
@@ -83,6 +84,9 @@ header {
     height: 75px;
     text-decoration: none;
     text-align: center;
+}
+#vid {
+    margin: 10px auto 10px auto
 }
 
 footer {
@@ -120,6 +124,7 @@ footer {
     background-color: aliceblue;
     border-radius: 20px;
     padding: 20px;
+    display: none;
 }
 
 .jumpingdiv {
@@ -127,4 +132,14 @@ footer {
     background-color: aliceblue;
     border-radius: 20px;
     padding: 20px;
+    display: none;
+}
+#p1, #p2 {
+    display: none;
+}
+#hide1, #hide2 {
+    width: 500px;
+}
+iframe {
+    display: none;
 }
