--- a/Final1123_Jordan_Pals/style/style.css
+++ b/Final1123_Jordan_Pals/style/style.css
@@ -14,6 +14,10 @@ font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
     margin: 0;
 }
+span {
+    font-family: 'Caveat', cursive;
+    font-size: 30px;
+}
 
 .background {
     background: url(../style/images/arcticfox1.jpg) no-repeat;
@@ -27,6 +31,8 @@ font-family: 'Open Sans', sans-serif;
 a {
     color: white;
     text-decoration: none;
+    font-family: 'Caveat', cursive;
+    font-size: 25px;
 }
 a:hover {
     color: rgb(168, 168, 168);
